<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="menu_zim_manager">Get Content</string>
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_forward">Forward</string>
  <string name="menu_back">Back</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search">Search article</string>
...
  <string name="new_tab_snackbar">Article opened in new tab</string>
  <string name="search_widget_text">Search Kiwix</string>
  <string name="speech_prompt_text">Speak to search %s</string>
  <string name="speech_not_supported">Sorry! Your device does not support speech input</string>
  <string name="download_started_library">Download started…</string>
  <string name="menu_library">Download content files</string>
  <string name="local_zims">Device</string>
  <string name="remote_zims">Online</string>
  <string name="zim_downloads">Downloading</string>
  <string name="zim_manager">Content Management</string>
  <string name="delete_specific_zim">Delete this file?</string>
  <string name="delete_specific_zim_toast">File deleted</string>
  <string name="zim_file_downloading">Downloading</string>
  <string name="zim_file_downloaded">Downloaded</string>
...
  <string name="open_partial_zim">This file could be incomplete. Do you wish to attempt to open it?</string>
  <string name="no_network_connection">No network connection</string>
  <string name="get_library_over_network">Use network to download content list. (Approximately 6MB)</string>
  <string name="proceed">Proceed</string>
  <string name="wait_for_load">Content Still Loading</string>
  <string name="help_1">Kiwix allows you offline access to websites such as Wikipedia in a highly compressed form.</string>
  <string name="help_2">What does Kiwix do?</string>
  <string name="help_3">Kiwix is an offline content reader. It acts very much like a browser but instead of accessing online web pages, it reads content from a file in ZIM format.</string>
  <string name="help_4">While Kiwix has been originaly designed to provide Wikipedia offline, it also reads other contents.</string>#
  <string name="help_5">Where is the content?</string>
  <string name="help_6">Our content is hosted on the kiwix website.</string>
  <string name="help_7">They are available as ZIM files. There are a lot of them:</string>
  <string name="help_8">\u2022 Wikipedia is available separately for each language</string>
  <string name="help_9">\u2022 Other contents like Wikileaks or Wikisource are also available</string>
  <string name="help_10">You can either download your choosen ZIM files in-app or carefuly select the one(s) you want and download from a Desktop computer before transfering the ZIM files to your SD card.</string>
  <string name="help_11">ZIM files download in-app are located in the external storage directory in a folder entitled Kiwix.</string>
  <string name="help_12">How to use large ZIM files?</string>
  <string name="help_13">If your ZIM file is larger than 4GB, you might not be able to store it on your SD card due to filesystem limitations.</string>
  <string name="help_14">Downloading in-app automaticaly handles larger files, splitting them up for you.</string>
  <string name="help_15">If however you are downloading on another device, you may need to split the ZIM file up using the following software:</string>
  <string name="help_16">\u2022 On Microsoft Windows: HJ-Split</string>
  <string name="help_17">\u2022 On Apple Mac OSX: Split and Concat</string>
  <string name="help_18">\u2022 On GNU/Linux and with the console: split --bytes=4000M my_big_file.zim</string>
  <string name="help_19">Note: your resulting files must be named my_big_file.zimaa, my_big_file.zimab, etc.</string>
  <string name="help_20">Thank you for choosing Kiwix!</string>
  <string name="help_21">We are glad to have you on board and would appreciate any feedback or suggestions at android@kiwix.org.</string>
  <string name="pref_storage">Storage</string>
  <string name="pref_current_folder">Current Folder</string>
  <string name="path_not_writable">Can not access desired directory, using default. To fix this reselect the desired directory in app settings.</string>
  <string name="pref_full_text_search_title">Fulltext Search</string>
...
