...
  </com.google.android.material.appbar.AppBarLayout>

  <ImageView
    android:id="@+id/activity_help_feedback_image_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/send_feedback"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_constraintTop_toBottomOf="@id/activity_help_appbar"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/ic_feedback_blue_24dp"
    />

...
