...
  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/zim_swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/zimfilelist"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior" />

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
